<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="userhint">Usuario</string>
    <string name="passwordhint">Password</string>
    <string name="login">Log in</string>
    <string name="registerlabel">Regístrate  aquí</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="emailhint">Email</string>
    <string name="signin">Register</string>
    <string name="notConnection">Error de conexión</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="newTweet">Tweet</string>
    <string name="whathappening">¿Qué está pasando?</string>
    <string name="close_dialog_new_tweet">¿Desea cancelar el tweet? El mensaje se borrará</string>
    <string name="cancel_new_tweet">Cancelar tweet</string>
    <string name="eliminate">Eliminar</string>
    <string name="cancel">Cancelar</string>
    <string name="websiteHint">Website</string>
    <string name="interestsHint">Descripción e intereses</string>
</resources>